--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@tanstack/react-query": "^5.27.5",
+    "@tanstack/react-query-next-experimental": "^5.27.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
@@ -26,8 +28,10 @@
     "vaul": "^0.9.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.27.7",
+    "@tanstack/react-query-devtools": "^5.27.8",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.2.65",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
@@ -37,6 +41,6 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.4.2"
   }
 }
