--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query": "^5.27.5",
     "@tanstack/react-query-next-experimental": "^5.27.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0",
+    "embla-carousel-wheel-gestures": "8.0.0-rc05",
     "lucide-react": "^0.344.0",
     "next": "14.1.1",
     "react": "^18.2.0",
