--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.8",
     "@tanstack/react-query": "^5.27.5",
     "@tanstack/react-query-next-experimental": "^5.27.5",
     "class-variance-authority": "^0.7.0",
