--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.1.1",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.43.5",
     "@tanstack/react-query": "^5.27.5",
