--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
+    "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@tanstack/eslint-plugin-query": "^5.27.7",
     "@tanstack/react-query-devtools": "^5.27.8",
     "@types/node": "^20",
